--- a/style.css
+++ b/style.css
@@ -1,7 +1,34 @@
 h1{
-    font-size: 35px;
+    font-size: 40px;
+    border-left:3px solid;
+
+    border-image:lin
+    
+   
+
 
 }
 .orange{
     color:orange;
+}
+section{
+    display:flex;
+}
+.one{
+    width:50%;
+    padding-left: 2%;
+
+}
+.one img{
+    width:80%;
+    margin-left: 30px;
+
+}
+.link{
+    text-decoration: none;
+    background-color:rgb(24, 146, 168);
+    color:white;
+    padding:5px 30px;
+    border-radius:5px;
+
 }
