--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 h1{
     font-size: 40px;
-    border-left:3px solid;
-
-    border-image:lin
-    
    
 
 
@@ -26,9 +22,54 @@ section{
 }
 .link{
     text-decoration: none;
-    background-color:rgb(24, 146, 168);
-    color:white;
-    padding:5px 30px;
-    border-radius:5px;
+    background-color: rgb(19, 199, 13);
+    padding:5px 25px;
+    color: white;
+    border-radius: 5px;
+  
+}
 
+
+
+.middle{
+    text-align: center;
+}
+
+
+.div-parent{
+    display: flex;
+    margin-right: 20px;
+}
+
+
+
+.div-one{
+    display:inline-block;
+    background-color:  #f092e2; 
+    height: 250px;
+    margin: 1%;
+    border-radius: 10px;
+    padding: 20px;
+    width: 30%;
+}
+.div-two{ display:inline-block;
+    background-color:aquamarine;   
+    height: 250px;
+    margin: 1%;
+    border-radius: 10px;
+    padding: 20px;
+    width: 30%;
+   
+}
+.div-three{ 
+    display:inline-block;
+    background-color: pink;   
+    height: 250px;
+    margin: 1%;
+    border-radius: 10px;
+    padding: 20px;
+    width: 30%;
+}
+.div-parent img{
+    width:120px;
 }
